--- a/qml.qrc
+++ b/qml.qrc
@@ -15,5 +15,7 @@
         	<file>images/white_knight.svg</file>
         	<file>images/white_queen.svg</file>
         	<file>images/white_rook.svg</file>
+		<file>images/circles.png</file>
+		<file>images/square.png</file>
 	</qresource>
 </RCC>
