--- a/qml.qrc
+++ b/qml.qrc
@@ -1,23 +1,29 @@
-<!DOCTYPE RCC>
 <RCC>
-	<qresource prefix="/">
- 		<file>qml/main.qml</file>
- 		<file>images/black_pawn.svg</file>
-       		<file>images/white_pawn.svg</file>
-        	<file>images/chess_board.jpg</file>
-        	<file>images/black_bishop.svg</file>
-        	<file>images/black_king.svg</file>
-        	<file>images/black_knight.svg</file>
-        	<file>images/black_queen.svg</file>
-        	<file>images/black_rook.svg</file>
-        	<file>images/white_bishop.svg</file>
-        	<file>images/white_king.svg</file>
-        	<file>images/white_knight.svg</file>
-        	<file>images/white_queen.svg</file>
-        	<file>images/white_rook.svg</file>
-		<file>images/circles.png</file>
-		<file>images/square.png</file>
-		<file>sounds/move1.wav</file>
-		<file>sounds/move2.wav</file>
-	</qresource>
+    <qresource prefix="/">
+        <file>qml/main.qml</file>
+        <file>images/black_pawn.svg</file>
+        <file>images/white_pawn.svg</file>
+        <file>images/chess_board.jpg</file>
+        <file>images/black_bishop.svg</file>
+        <file>images/black_king.svg</file>
+        <file>images/black_knight.svg</file>
+        <file>images/black_queen.svg</file>
+        <file>images/black_rook.svg</file>
+        <file>images/white_bishop.svg</file>
+        <file>images/white_king.svg</file>
+        <file>images/white_knight.svg</file>
+        <file>images/white_queen.svg</file>
+        <file>images/white_rook.svg</file>
+        <file>images/circles.png</file>
+        <file>images/square.png</file>
+        <file>sounds/move1.wav</file>
+        <file>sounds/move2.wav</file>
+        <file>sounds/draw.mp3</file>
+        <file>sounds/kingThreat.mp3</file>
+        <file>sounds/resign.mp3</file>
+        <file>sounds/check.mp3</file>
+        <file>sounds/chekmate.mp3</file>
+        <file>sounds/win.mp3</file>
+        <file>sounds/lose.mp3</file>
+    </qresource>
 </RCC>
