--- a/qml.qrc
+++ b/qml.qrc
@@ -21,10 +21,10 @@
         <file>sounds/draw.wav</file>
         <file>sounds/resign.wav</file>
         <file>sounds/check.wav</file>
-        <file>sounds/chekmate.wav</file>
         <file>sounds/win.wav</file>
         <file>sounds/lose.wav</file>
         <file>sounds/passant.wav</file>
         <file>sounds/castle.wav</file>
+        <file>sounds/checkmate.wav</file>
     </qresource>
 </RCC>
